Fixed about setction overflow

--- a/css/about-section.css
+++ b/css/about-section.css
@@ -7,7 +7,7 @@
     padding: 100px 100px;
     background-color: #141414;
 
-    height: 100vh;
+    height: fit-content;
     width: 100%;
 
     font-size: 6rem;
@@ -56,7 +56,7 @@
 
   .about-section-content-info {
     width: 100%;
-    height: 600px;
+    height: fit-content;
 
     font-size: 3rem;
     font-weight: 500;
@@ -91,13 +91,14 @@
 
   .about-section-content-skills {
     width: 100%;
-    height: 600px;
+    height: fit-content;
 
     font-size: 3rem;
     font-weight: 500;
     color: white;
 
     padding: 4rem;
+    text-align: center;
 
     display: flex;
     flex-direction: column;
